[package]
name = "decoders"
version = "0.1.0"
edition = "2021"

[build-dependencies]
shared = { version = "0.1.0", path = "../shared" }
syn = "2.0.66"

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
anyhow = "1.0.86"

# Optional Dependencies
openslide-rs = { version = "2.1.0", optional = true }

[features]
default = ["openslide"]

openslide = ["dep:openslide-rs"]