[package]
name = "decoders"
version = "0.1.0"
edition = "2021"

[build-dependencies]
shared = { version = "0.1.0", path = "../shared" }
syn = { workspace = true }

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
anyhow = { workspace = true }
image = { workspace = true }

# Optional Dependencies
openslide-rs = { version = "2.3.0", optional = true }

[features]
default = ["openslide"]

openslide = ["dep:openslide-rs"]