[package]
name = "encoders"
version = "0.1.0"
edition = "2021"

[build-dependencies]
shared = { version = "0.1.0", path = "../shared" }

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
anyhow = { workspace = true }
rayon = { workspace = true }
zarrs = { workspace = true }

[features]
default = ["omezarr"]

omezarr = []