[package]
name = "encoders"
version = "0.0.0"
edition = "2024"

[build-dependencies]
shared = { version = "0.0.0", path = "../shared" }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dependencies]
shared = { version = "0.0.0", path = "../shared" }
anyhow = { workspace = true }
rayon = { workspace = true }
zarrs = { workspace = true }

[features]
default = ["omezarr", "test"]

omezarr = []
test = []
time = []
