[package]
name = "generators"
version = "0.0.0"
edition = "2024"

[build-dependencies]
shared = { version = "0.0.0", path = "../shared" }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dependencies]
shared = { version = "0.0.0", path = "../shared" }
anyhow = { workspace = true }

# Optional Dependencies
flate2 = { version = "1.1.1", optional = true }
geo-traits = { version = "0.2.0", optional = true }
geo-types = { version = "0.7.16", optional = true }
rusqlite = { version = "0.35.0", features = ["bundled"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
wkb = { version = "0.8.0", optional = true }

[features]
default = ["tiatoolbox", "test"]

tiatoolbox = [
    "dep:flate2",
    "dep:geo-traits",
    "dep:geo-types",
    "dep:rusqlite",
    "dep:serde",
    "dep:serde_json",
    "dep:wkb",
]
test = []
