[package]
name = "generators"
version = "0.0.0"
edition = "2024"

[build-dependencies]
shared = { version = "0.0.0", path = "../shared" }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dependencies]
shared = { version = "0.0.0", path = "../shared" }
anyhow = { workspace = true }

# Optional Dependencies
flate2 = { version = "1.1.1", default-features = false, optional = true }
geo-traits = { version = "0.3.0", default-features = false, optional = true }
geo-types = { version = "0.7.16", default-features = false, optional = true }
rusqlite = { version = "0.36.0", default-features = false, features = [
    "bundled",
], optional = true }
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
], optional = true }
serde_json = { version = "1.0.140", default-features = false, optional = true }
wkb = { version = "0.9.0", default-features = false, optional = true }

[features]
default = ["tiatoolbox", "test"]

tiatoolbox = [
    "dep:flate2",
    "dep:geo-traits",
    "dep:geo-types",
    "dep:rusqlite",
    "dep:serde",
    "dep:serde_json",
    "dep:wkb",
]
test = []
