[package]
name = "rendering_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rendering_engine"
path = "src/main.rs"

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
decoders = { version = "0.1.0", path = "../decoders" }
encoders = { version = "0.1.0", path = "../encoders" }
generators = { version = "0.1.0", path = "../generators" }
macros = { version = "0.1.0", path = "../macros" }

anyhow = { workspace = true }
axum = { workspace = true }
axum_typed_multipart = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
turbojpeg = { workspace = true }

[features]
default = [
    # "time",
    "log.console",
]

time = []
"log.console" = []
