[package]
name = "rendering-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rendering_engine"
path = "src/api.rs"

[profile.release]
lto = true
strip = true

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.7.2", features = ["ws"] }
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
futures-util = { version = "0.3.29", features = ["async-await", "sink"] }
tower-http = { version = "0.5.0", features = ["cors", "add-extension"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
# Bindings for OpenSlide, used to decode many image formats like WSI
openslide-rs = "2.0.0"
image = "0.24.7"
# OME-ZARR
zarrs = "0.8.0"
rayon = "1.5.1"
safe-transmute = "0.11.2"
chrono = "0.4.19"
itertools = "0.12.0"

[features]
default = []
