[package]
name = "rendering_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rendering_engine"
path = "src/api.rs"

[profile.release]
lto = true
strip = true

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.7.2", features = ["ws", "multipart"] }
axum_typed_multipart = "0.11.0"
anyhow = "1.0.75"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
futures-util = { version = "0.3.29", features = ["async-await", "sink"] }
tower-http = { version = "0.5.0", features = ["cors", "add-extension"] }
tempfile = "3.2.0"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
libloading = "0.8.1"
# Bindings for OpenSlide, used to decode many image formats like WSI
openslide-rs = "2.0.0"
image = "0.24.7"
# ZARR support
zarrs = "0.9.0"
rayon = "1.5.1"
# itertools = "0.12.0"
# safe-transmute = "0.11.2"
# chrono = "0.4.19"

[features]
# Currently "openslide" is a necessary feature, do not remove.
default = ["openslide", "tiatoolbox"]
# Decoders
openslide = []
# Plugins
tiatoolbox = []