[package]
name = "rendering_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rendering_engine"
path = "src/api.rs"

[profile.release]
lto = true
strip = true

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["ws", "multipart"] }
axum_typed_multipart = "0.11.0"
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tower-http = { version = "0.5.0", features = ["cors"] }
tempfile = "3.9.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
libloading = "0.8.1"
# Bindings for OpenSlide, used to decode many image formats like WSI
openslide-rs = "2.0.0"
image = "0.24.8"
# ZARR support
zarrs = "0.9.0"

[features]
# Currently "openslide" is a necessary feature, do not remove.
default = ["openslide", "tiatoolbox"]
# Decoders
openslide = []
# Plugins
tiatoolbox = []